--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -7,9 +7,9 @@ dopepod
 {% block content %}
 <!-- MULTI BAR -->
 <div class="container" id="bar">
-   <form class="row" id="search-form" method="GET" action="{% url 'search' %}">
-     {% include 'multibar.html' %}
-   </form>
+  <div class="row">
+    {% include 'multibar.html' %}
+  </div>
 </div>
 <!-- MAIN -->
 <div class="container"id="main">
