--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,6 +1,6 @@
 <ul class="navbar-nav">
   <li class="nav-item">
-    <a class="navbar-brand home-link" href="{% url 'home' %}">
+    <a class="navbar-brand home-link" href="{% url 'index' %}">
       dopepod
     </a>
   </li>
