--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -10,7 +10,7 @@ dopepod
   <div class="row">
     {% if podcasts %}
       {% for podcast in podcasts %}
-        <div class="col-lg-2 col-md-3 col-sm-4 col-6 result-box" id="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 result-box">
           <form id="sub-form" action="{% url 'subscribe' %}"
           id="{{ podcast.itunesid }}" method="POST">
             {% csrf_token %}
