--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -12,11 +12,9 @@ dopepod
       <div class="col">
         {% for subscription in subscriptions %}
           <div class="row">
-            <a class="col show-podinfo sub-box"
-            id="{{ subscription.itunesid }}" href=
-             "{% url 'podinfo' itunesid=subscription.itunesid %}">
+            <a class="col show-podinfo sub-box" href="{% url 'podinfo' itunesid=subscription.itunesid %}">
               <h6>
-                {{ subscription.pod.title }}
+                {{ subscription.title }}
               </h6>
               <p>
                 {{ subscription.last_updated }}
