--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -6,8 +6,11 @@ dopepod
 
 {% block content %}
 <!-- MULTI BAR -->
-<div class="container" id="bar">
-  <div class="row">
+<div class="container sticky-top" id="bar">
+  <div class="row" id="stage">
+    
+  </div>
+  <div class="row" id="multi-bar">
     {% include 'multibar.html' %}
   </div>
 </div>
