--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -5,7 +5,7 @@ dopepod
 {% endblock %}
 
 {% block results %}
-<div class="col" id="results">
+<div class="col">
   {% include 'optionsbar.html' %}
   <div class="row" id="subscriptions-list">
     {% if subscriptions %}
