--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -1,4 +1,4 @@
-<div class="col color" id="multi-bar">
+<div class="col color">
   <!-- SEARCH BAR -->
   <form id="search-form" method="GET" action="{% url 'search' %}">
     {% if search %}
