--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -10,7 +10,7 @@ dopepod
   <div class="row" id="stage">
     
   </div>
-  <div class="row" id="multi-bar">
+  <div class="row color" id="multi-bar">
     {% include 'multibar.html' %}
   </div>
 </div>
